# blaze

./: README.md
backend/: .env.sample  .gitignore  blaze.db  main.py  pyproject.toml
backend/core/: base.py  enums.py  llm.py  reasoning.py  session.py
backend/database/: db.py  initialise.py  pool.py
backend/tools/: base.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: Chat.tsx  ChatInput.tsx  ChatMessage.tsx  MessageContent.tsx  ToolContent.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/types/: chat.ts
